@@ -1,6 +1,7 @@
 <pre>
 2007-XX-XX:
 	* version 0.5.3
+	* :q doesn't close the whole browser, if there are more than one windows
 	* new :winclose command
 	* b calls :buffer! now instead of :buffer
 	* [+], [-] and [+-] in the statusline, whether we can go back, forward, or both
